# ScholarOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  setup.py  start.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_mode_proposal.md
backend/: .env.example  Makefile  pyproject.toml
backend/api/: main.py
backend/core/: __init__.py  ingestion.py  llm_client.py  vector_store.py
backend/modes/: __init__.py  base_mode.py  flashcard_mode.py  qa_mode.py
backend/scripts/: download_model.py  setup.bat
backend/tests/: __init__.py  conftest.py  test_api.py  test_ingestion.py  test_modes.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Sidebar.jsx
frontend/src/components/common/: MarkdownRenderer.jsx
frontend/src/components/modes/: ChatMode.jsx  FlashcardMode.jsx  SummaryMode.jsx
frontend/src/hooks/: useDocument.js  useDocuments.js  useFlashcards.js  useStreamChat.js  useSummary.js
